<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context="com.chatt.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"
            android:layout_marginBottom="@dimen/pad_20dp" />

        <EditText
            android:id="@+id/userfield"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/txt_68dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pwdfield"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/txt_68dp"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnLogin"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/txt_60dp"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:onClick="getlogin" />

            <Button
                android:id="@+id/btnregister"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/txt_60dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:layout_marginTop="@dimen/txt_8dp"
                android:onClick="getregister" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>