<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.chatt.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:src="@drawable/logo_login" />

        <EditText
            android:id="@+id/email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_weight="0.23">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/user"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/txt_60dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username" >
        </EditText>

        <EditText
            android:id="@+id/pwd"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/txt_54dp"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:text="@string/register"
                android:focusable="true"
                android:onClick="onclickbtnReg" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
